; ModuleID = '/home/carl/AnghaBench/fastdfs/client/extr_fdfs_test1.c_uploadFileCallback.c'
source_filename = "/home/carl/AnghaBench/fastdfs/client/extr_fdfs_test1.c_uploadFileCallback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EINVAL = common dso_local global i32 0, align 4
@g_fdfs_network_timeout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uploadFileCallback(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  store i8* %0, i8** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i8*, i8** %5, align 8
  %11 = icmp eq i8* %10, null
  br i1 %11, label %12, label %14

12:                                               ; preds = %3
  %13 = load i32, i32* @EINVAL, align 4
  store i32 %13, i32* %4, align 4
  br label %21

14:                                               ; preds = %3
  %15 = load i8*, i8** %5, align 8
  store i8* %15, i8** %9, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i8*, i8** %9, align 8
  %18 = load i32, i32* %6, align 4
  %19 = load i32, i32* @g_fdfs_network_timeout, align 4
  %20 = call i32 @tcpsendfile(i32 %16, i8* %17, i32 %18, i32 %19, i32* %8)
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %14, %12
  %22 = load i32, i32* %4, align 4
  ret i32 %22
}

declare dso_local i32 @tcpsendfile(i32, i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
